--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1330,7 +1330,7 @@ img {
 .portfolio .portfolio-item {
   background: #1e4356;
   overflow: hidden;
-  min-height: 200px;
+  max-height: 200px;
   position: relative;
   border-radius: 4px;
   margin: 0 0 30px 0;
@@ -2369,13 +2369,14 @@ img {
 .second-box{
   flex: 1 1 30%;
   display: flex;
-  width: 80%;
+  width: 90%;
   flex-direction: column;
 }
 
 .iframe-part {
   flex: 1 1 70%;
-  width: 80%;
+  width: 90%;
+  margin-bottom: 50px;
 }
 
 #ER-model-container {
@@ -2384,6 +2385,7 @@ img {
   display: flex;
   justify-content: space-around;
   align-content: center;
+
 }
 
 #TM-model {
@@ -2394,4 +2396,8 @@ img {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+.second-box h4 {
+  padding: 20px;
 }
